src/objects/loan__Value_Set_Values__c.object
<CustomObject>
    <description>Values of the value set</description>
    <fields>
        <fullName>loan__Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Effective_From__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <description>Effective From</description>
        <label>Effective From</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Effective_To__c</fullName>
        <description>Effective To</description>
        <label>Effective To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Id__c</fullName>
        <description>Id</description>
        <label>Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>loan__Set_id__c</fullName>
        <label>Set_id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Value_Set__c</fullName>
        <label>Value Set</label>
        <referenceTo>loan__Value_Sets__c</referenceTo>
        <relationshipLabel>Value Set Value</relationshipLabel>
        <relationshipName>Value_Set_Value</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Value Set Value</label>
    <nameField>
        <label>Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Set Value</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>